RESOLVED FIXED73137
[GTK] Fix some warnings in WebCore GTK+
https://bugs.webkit.org/show_bug.cgi?id=73137
Summary [GTK] Fix some warnings in WebCore GTK+
Martin Robinson
Reported 2011-11-25 08:21:32 PST
There are some lingering warnings in WebCore with my version of gcc.
Attachments
Patch (3.36 KB, patch)
2011-11-25 08:26 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2011-11-25 08:26:15 PST
Philippe Normand
Comment 2 2011-11-25 08:31:18 PST
Comment on attachment 116626 [details] Patch Nice catch!
WebKit Review Bot
Comment 3 2011-11-26 02:16:52 PST
Comment on attachment 116626 [details] Patch Clearing flags on attachment: 116626 Committed r101190: <http://trac.webkit.org/changeset/101190>
WebKit Review Bot
Comment 4 2011-11-26 02:16:56 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.