[GTK] Fix some warnings in WebCore GTK+ https://bugs.webkit.org/show_bug.cgi?id=73137

Patch by Martin Robinson <mrobinson@igalia.com> on 2011-11-26
Reviewed by Philippe Normand.

No new tests. This patch just fixes compilation warnings.

* platform/gtk/CursorGtk.cpp:
(WebCore::createNamedCursor): Remove unused variable.
* platform/gtk/RenderThemeGtk3.cpp:
(WebCore::RenderThemeGtk::paintSliderTrack): ASSERT_UNUSED instead of ASSERT.
* platform/gtk/SharedTimerGtk.cpp: Ditto.
(WebCore::stopSharedTimer):

Canonical link: https://commits.webkit.org/89671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101190 268f45cc-cd09-0410-ab3c-d52691b4dbfc